{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 28,
  "lineage": "2893a426-e1a8-56e7-b267-3a67485d688d",
  "resources": [
    {
      "module": "module.nginx_server_dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-server",
      "provider": "module.nginx_server_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00beae93a2d981137",
            "arn": "arn:aws:ec2:us-east-1:590183952961:instance/i-00792b6c790914398",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00792b6c790914398",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx-server-dev-ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa28caf8ce333b4c",
            "private_dns": "ip-172-31-18-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.183",
            "public_dns": "ec2-54-87-220-105.compute-1.amazonaws.com",
            "public_ip": "54.87.220.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a458c36538f14c53",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx-server-dev-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ea6a3f48d2aeb83",
            "tags": {
              "Environment": "dev",
              "Name": "nginx-server-dev",
              "Owner": "myemployeess@mysoftwareRD.com",
              "Project": "Webinar-Caosbinario-Terraform",
              "Team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nginx-server-dev",
              "Owner": "myemployeess@mysoftwareRD.com",
              "Project": "Webinar-Caosbinario-Terraform",
              "Team": "Devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f47f6138623050e"
            ]
          },
          "dependencies": [
            "module.nginx_server_dev.aws_key_pair.nginx-server-ssh",
            "module.nginx_server_dev.aws_security_group.nginx-server-sg"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_server_dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-server-sg",
      "provider": "module.nginx_server_dev.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183952961:security-group/sg-03f47f6138623050e",
            "description": "Security group allowing SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f47f6138623050e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-server-dev-sg",
            "name_prefix": "",
            "owner_id": "590183952961",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "nginx-server-dev-sg",
              "Owner": "myemployeess@mysoftwareRD.com",
              "Project": "Webinar-Caosbinario-Terraform",
              "Team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nginx-server-dev-sg",
              "Owner": "myemployeess@mysoftwareRD.com",
              "Project": "Webinar-Caosbinario-Terraform",
              "Team": "Devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a1445927928413a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.nginx_server_qa",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-server",
      "provider": "module.nginx_server_qa.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00beae93a2d981137",
            "arn": "arn:aws:ec2:us-east-1:590183952961:instance/i-0e7feaa07c9a43215",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7feaa07c9a43215",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx-server-qa-ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa32232f67071743",
            "private_dns": "ip-172-31-25-201.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.201",
            "public_dns": "ec2-54-205-74-98.compute-1.amazonaws.com",
            "public_ip": "54.205.74.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-082571f409b6ebec3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx-server-qa-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ea6a3f48d2aeb83",
            "tags": {
              "Environment": "qa",
              "Name": "nginx-server-qa",
              "Owner": "myemployeess@mysoftwareRD.com",
              "Project": "Webinar-Caosbinario-Terraform",
              "Team": "Devops"
            },
            "tags_all": {
              "Environment": "qa",
              "Name": "nginx-server-qa",
              "Owner": "myemployeess@mysoftwareRD.com",
              "Project": "Webinar-Caosbinario-Terraform",
              "Team": "Devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d1260033c44ba17"
            ]
          },
          "dependencies": [
            "module.nginx_server_qa.aws_key_pair.nginx-server-ssh",
            "module.nginx_server_qa.aws_security_group.nginx-server-sg"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_server_qa",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-server-sg",
      "provider": "module.nginx_server_qa.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183952961:security-group/sg-06d1260033c44ba17",
            "description": "Security group allowing SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d1260033c44ba17",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-server-qa-sg",
            "name_prefix": "",
            "owner_id": "590183952961",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "nginx-server-qa-sg",
              "Owner": "myemployeess@mysoftwareRD.com",
              "Project": "Webinar-Caosbinario-Terraform",
              "Team": "Devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nginx-server-qa-sg",
              "Owner": "myemployeess@mysoftwareRD.com",
              "Project": "Webinar-Caosbinario-Terraform",
              "Team": "Devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a1445927928413a"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}